feat: 편집 로그 조회 시 version, documentBytes 필드 추가 (#16)